[tool.poetry]
name = "meethour-example"
version = "1.0.0"
description = "Meet Hour is video conferencing solution with End to End Encrypted and many other features such as lobby mode, Donor box & Click&Pledge Connect for fundraising, Video call recording, Youtube Live Stream etc"
authors = ["Meet Hour <hello@meethour.io>"]
license = "MIT"
readme='README.md'
homepage='https://meethour.io'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
flask = "^2.3.3"
pymeethour = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
